Un niveau peut définir un niveau max par type de tours
ex: tour d'archer niveau 2 et tour de magie niveau 4
Dans ce cas, seuls les niveaux 1 et 2 seront dispo pour la tour d'archer, alors que la tour de magie, sur ce niveau pourra aller jusqu'à 4, même si les deux types de tours ont 5 niveaux définis en dehors des niveaux.
